# numcore

./: README.md  pyproject.toml
src/numcore/: __init__.py  __main__.py
