[project]
name = "numcore"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sondeko", email = "sondeko143@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"numcore" = "numcore:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/numcore"]

[tool.ruff]
line-length = 88